@@ -1,13 +1,18 @@
+2011-03-09 Lefteris Zafiris <zaf.000@gmail.com> - 2.1rc3
+	Changed output file format to raw signed lineral. This
+	adds support for 16kHz sound playback in asterisk 1.6.
+	Added checks for text input length.  
+	
 2011-03-09 Lefteris Zafiris <zaf.000@gmail.com> - 2.1rc2
 	Better error handling.
 	Using mkstemps() for safer temp file name generation,
-instead of ast_random().
+	instead of ast_random().
 	Using ast_malloc() instead of malloc().
 	Increased internal espeak synth buffer to 2sec.
 
 2011-27-08 Lefteris Zafiris <zaf.000@gmail.com> - 2.1rc1
 	Switched to libsamplerate for resampling. Resampling
-now is much faster.
+	now is much faster.
 	Major code cleanup. 
 
 2011-19-08 Lefteris Zafiris <zaf.000@gmail.com> - 2.0
